--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -52,6 +52,6 @@ apps
 - [x] 定时任务：在线（添加、修改、删除）任务调度包含执行结果日志。
 - [x] 代码生成：前后端代码的生成及下载。
 - [x] 系统接口：根据业务代码自动生成相关的接口文档。
-- [ ] 通知公告：系统通知公告发布维护。
+- [x] 通知公告：系统通知公告发布维护。
 
 ## 演示图
