--- a/apps/docs/pages/backend/config.mdx
+++ b/apps/docs/pages/backend/config.mdx
@@ -42,7 +42,7 @@ import { ConfigService } from '@/modules/config';
 
 @Injectable()
 export class AppService implements OnModuleInit {
-  constructor(private readonly config: ConfigService) {}
+  constructor(private config: ConfigService) {}
 
   onModuleInit() {
     this.config.get();
