--- a/apps/docs/pages/backend/gen.mdx
+++ b/apps/docs/pages/backend/gen.mdx
@@ -4,10 +4,145 @@ title: 代码生成
 
 大部分项目里其实有很多代码都是重复的，几乎每个基础模块的代码都有增删改查的功能，而这些功能都是大同小异，如果这些功能都要自己去写，将会大大浪费我们的精力降低效率。所以这种重复性的代码可以使用代码生成。
 
-## 代码生成使用
+代码生成器基于数据库表结构，自动生成后端 NestJS 代码和前端 React 代码，包括实体类、DTO、Service、Controller、Mapper、前端页面等。
 
-1、登录系统（系统工具 -> 代码生成 -> 导入对应表）
+## 使用流程
 
-2、代码生成列表中找到需要表（可预览、编辑、同步、删除生成配置）
+### 1. 导入数据表
 
-3、点击生成代码会得到一个压缩包，按照包内目录结构复制到自己的项目中即可
+登录系统后，进入"系统工具 -> 代码生成"，点击"导入"按钮，选择需要生成代码的数据表。
+
+::: tip 表结构要求
+- 表必须有主键
+- 建议表名使用下划线命名（如：`sys_user`）
+- 字段建议添加注释，便于生成更友好的代码
+:::
+
+### 2. 配置生成信息
+
+在代码生成列表中找到需要生成代码的表，可以：
+
+- **预览**：查看生成的代码预览
+- **编辑**：修改生成配置（表信息、字段信息等）
+- **同步**：同步数据库表结构变化
+- **删除**：删除生成配置
+
+### 3. 生成代码
+
+点击"生成代码"按钮，系统会生成一个压缩包，包含：
+
+```
+generated/
+  ├── backend/              # 后端代码
+  │   ├── entities/        # 实体类
+  │   ├── dto/             # DTO 类
+  │   ├── vo/              # VO 类
+  │   ├── *.service.ts     # Service
+  │   ├── *.controller.ts  # Controller
+  │   ├── *.mapper.ts       # Mapper
+  │   └── *.mapper.xml      # Mapper XML
+  └── frontend/             # 前端代码
+      ├── pages/           # 页面组件
+      ├── apis/            # API 接口
+      └── models/          # 数据模型
+```
+
+### 4. 复制代码
+
+按照压缩包内的目录结构，将生成的代码复制到项目中对应的位置。
+
+## 生成配置
+
+### 表信息配置
+
+- **表名称**：数据库表名
+- **表描述**：表的说明，用于生成注释
+- **实体类名**：生成的实体类名称
+- **作者**：代码作者
+- **创建时间**：代码创建时间
+
+### 字段信息配置
+
+- **字段名称**：数据库字段名
+- **字段描述**：字段说明
+- **字段类型**：Java/TypeScript 类型
+- **是否主键**：是否为主键
+- **是否必填**：是否必填
+- **是否列表**：是否在列表页显示
+- **是否表单**：是否在表单中显示
+- **是否查询**：是否作为查询条件
+- **表单类型**：表单控件类型（输入框、下拉框、日期选择器等）
+- **字典类型**：如果使用字典，指定字典类型
+
+## 模板说明
+
+代码生成器使用 Handlebars 模板引擎，模板文件位于：
+
+- 后端模板：`apps/api/src/modules/gen/template/nest/`
+- 前端模板：`apps/api/src/modules/gen/template/react/`
+
+### 后端模板
+
+- `entity.hbs`：实体类模板
+- `dto.hbs`：DTO 模板
+- `vo.hbs`：VO 模板
+- `service.hbs`：Service 模板
+- `controller.hbs`：Controller 模板
+- `mapper.hbs`：Mapper 模板
+- `mapper-xml.hbs`：Mapper XML 模板
+
+### 前端模板
+
+- `index.hbs`：列表页模板
+- `model.hbs`：数据模型模板
+- `api.hbs`：API 接口模板
+- `columns.hbs`：表格列配置模板
+
+## 自定义模板
+
+如果需要自定义生成代码的格式，可以修改模板文件：
+
+1. 找到对应的模板文件
+2. 使用 Handlebars 语法修改模板
+3. 重新生成代码
+
+::: tip 模板变量
+模板中可以使用以下变量：
+- `table`：表信息
+- `columns`：字段列表
+- `className`：类名
+- `author`：作者
+- `date`：日期
+:::
+
+## 注意事项
+
+::: warning 代码覆盖
+生成的代码会覆盖同名文件，建议：
+- 首次生成后立即提交到版本控制
+- 修改生成的代码前先备份
+- 使用 Git 管理代码变更
+:::
+
+::: tip 代码审查
+生成的代码是基础框架，通常需要：
+- 检查业务逻辑是否正确
+- 添加必要的业务验证
+- 优化查询性能
+- 添加适当的注释
+:::
+
+::: warning 数据库同步
+如果修改了数据库表结构，需要：
+1. 在代码生成中点击"同步"按钮
+2. 检查字段配置是否正确
+3. 重新生成代码
+4. 手动合并业务逻辑变更
+:::
+
+::: tip 最佳实践
+- 生成代码后立即测试基本功能
+- 根据业务需求调整生成的代码
+- 保留生成配置，便于后续维护
+- 定期同步数据库结构变化
+:::
