--- a/apps/docs/pages/development.mdx
+++ b/apps/docs/pages/development.mdx
@@ -2,40 +2,396 @@
 title: 本地开发
 ---
 
-## 下载项目
+本文档将指导你如何在本地搭建 NAA 项目的开发环境。
 
-克隆项目到本地
+## 📋 环境要求
 
-```sh
-git clone https://github.com/hexuntao/naa.git
+在开始之前，请确保你的开发环境已安装以下软件：
+
+| 软件        | 版本要求   | 说明                                     |
+| ----------- | ---------- | ---------------------------------------- |
+| **Node.js** | >= 16.14.1 | [下载地址](https://nodejs.org/)          |
+| **pnpm**    | >= 8.6.10  | [安装方法](https://pnpm.io/installation) |
+| **MySQL**   | >= 8.0     | 或兼容版本（如 MariaDB）                 |
+| **Redis**   | >= 6.0     | 可选，用于缓存和队列                     |
+
+::: tip 检查版本
+
+```bash
+node -v    # 应 >= 16.14.1
+pnpm -v    # 应 >= 8.6.10
+mysql --version
+redis-cli --version
 ```
+
+:::
+
+## 📥 下载项目
+
+### 克隆仓库
+
+```bash
+git clone https://github.com/hexuntao/naa.git
+cd naa
+```
+
+### 安装依赖
 
 此项目使用 `pnpm` 的 `workspace` 管理项目，所以必须使用 `pnpm` 安装依赖。
 
-```sh
+```bash
 pnpm install
 ```
 
-## 环境准备
+::: warning 包管理器
 
-- `Node`
-- `MySQL`
-- `Redis`
+- 必须使用 `pnpm`，不要使用 `npm` 或 `yarn`
+- 如果未安装 pnpm，可以使用：`npm install -g pnpm` :::
 
-## 运行项目
+## 🗄️ 数据库初始化
 
-启动
+### 1. 创建数据库
 
-```sh
-pnpm dev
+```bash
+mysql -u root -p -e "CREATE DATABASE naa DEFAULT CHARSET utf8mb4 COLLATE utf8mb4_general_ci;"
 ```
 
-分别访问
+### 2. 导入初始化脚本
 
-后端服务： `http://127.0.0.1:6010/api`
+```bash
+mysql -u root -p naa < sql/naa.sql
+```
 
-后端接口页面： `http://127.0.0.1:6010/api-docs`
+或者使用 MySQL 客户端工具（如 Navicat、DBeaver）导入 `sql/naa.sql` 文件。
 
-后台管理系统页面： `http://127.0.0.1:6020/admin`
+::: tip 默认数据初始化脚本包含：
 
-教程文档页面： `http://127.0.0.1:6030/docs`
+- 数据库表结构
+- 默认管理员账号：`admin` / `admin123`
+- 演示账号：`demo` / `123456`
+- 基础字典数据
+- 系统菜单数据 :::
+
+## ⚙️ 环境配置
+
+### 环境变量（可选）
+
+项目支持通过环境变量覆盖配置，可以在项目根目录创建 `.env` 文件：
+
+```bash
+# 数据库配置
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=your_password
+DB_NAME=naa
+
+# Redis 配置
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# API 配置
+API_PORT=6010
+API_HOST=127.0.0.1
+API_PREFIX=api
+
+# JWT 密钥（生产环境必须修改）
+JWT_SECRET=your_secret_key
+```
+
+### 配置文件
+
+项目配置文件位于 `apps/api/src/config/` 目录：
+
+- `config.yaml` - 基础配置
+- `config.development.yaml` - 开发环境配置
+- `config.production.yaml` - 生产环境配置
+
+开发环境下，配置会自动从 `config.development.yaml` 加载。
+
+::: tip 配置优先级环境变量 > 环境配置文件 > 基础配置文件 :::
+
+### 默认配置说明
+
+开发环境的默认配置：
+
+```yaml
+# 数据库（开发环境会自动同步表结构）
+datasource:
+  host: localhost
+  port: 3306
+  username: root
+  password: root123456 # 请根据实际情况修改
+  database: naa
+  synchronize: true # 开发环境自动同步表结构
+
+# Redis
+redis:
+  host: localhost
+  port: 6379
+
+# API 服务
+app:
+  port: 6010
+  host: 127.0.0.1
+  prefix: api
+```
+
+::: warning 生产环境生产环境请务必：
+
+- 修改数据库密码
+- 修改 JWT 密钥
+- 关闭 `synchronize`（自动同步表结构）
+- 关闭 Swagger 文档 :::
+
+## 🚀 启动项目
+
+### 一键启动（推荐）
+
+同时启动后端和前端：
+
+```bash
+pnpm run dev
+```
+
+### 分别启动
+
+如果需要单独启动某个服务：
+
+```bash
+# 仅启动后端 API
+pnpm run dev:api
+
+# 启动前端（会自动启动后端）
+pnpm run dev:admin
+
+# 启动文档站点
+pnpm run dev:docs
+```
+
+### 访问地址
+
+启动成功后，访问以下地址：
+
+| 服务         | 地址                           | 说明             |
+| ------------ | ------------------------------ | ---------------- |
+| **后端 API** | http://127.0.0.1:6010/api      | RESTful API 接口 |
+| **接口文档** | http://127.0.0.1:6010/api-docs | Swagger API 文档 |
+| **后台管理** | http://127.0.0.1:6020/admin    | 前端管理系统     |
+| **项目文档** | http://127.0.0.1:6030/docs     | 本文档站点       |
+
+## 🔧 开发模式
+
+### 热更新
+
+开发模式下，代码修改后会自动重新编译：
+
+- **后端**：使用 `nest start --watch`，修改代码后自动重启
+- **前端**：使用 Umi 的 HMR，修改代码后自动刷新浏览器
+
+### 日志查看
+
+后端日志输出到控制台和文件：
+
+- 控制台：实时查看日志输出
+- 文件日志：`apps/api/logs/` 目录
+  - `naa-YYYY-MM-DD.log` - 应用日志
+  - `naa-error-YYYY-MM-DD.log` - 错误日志
+  - `naa-sql-YYYY-MM-DD.log` - SQL 日志
+
+### 调试技巧
+
+#### 后端调试
+
+1. **使用 VS Code 调试**：
+   - 在 `.vscode/launch.json` 中配置调试任务
+   - 设置断点，按 F5 开始调试
+
+2. **查看 SQL 日志**：
+   - 开发环境会自动记录 SQL 语句
+   - 查看 `logs/naa-sql-*.log` 文件
+
+3. **使用 Swagger 测试接口**：
+   - 访问 http://127.0.0.1:6010/api-docs
+   - 在 Swagger UI 中直接测试 API
+
+#### 前端调试
+
+1. **React DevTools**：
+   - 安装浏览器扩展
+   - 查看组件状态和 Props
+
+2. **网络请求调试**：
+   - 使用浏览器开发者工具的 Network 面板
+   - 查看 API 请求和响应
+
+3. **Redux DevTools**（如果使用）：
+   - 查看全局状态变化
+
+## 🛠️ 常用命令
+
+### 开发命令
+
+```bash
+# 启动所有服务
+pnpm run dev
+
+# 仅启动后端
+pnpm run dev:api
+
+# 仅启动前端
+pnpm run dev:admin
+
+# 启动文档
+pnpm run dev:docs
+```
+
+### 构建命令
+
+```bash
+# 构建所有应用
+pnpm build
+
+# 构建后端
+cd apps/api && pnpm build
+
+# 构建前端
+cd apps/admin && pnpm build
+```
+
+### 代码质量
+
+```bash
+# 代码检查
+pnpm lint
+
+# 代码格式化
+pnpm format
+
+# 修复可自动修复的问题
+pnpm lint --fix
+```
+
+### 数据库相关
+
+```bash
+# 同步数据库表结构（开发环境）
+# 修改 Entity 后，重启服务会自动同步
+
+# 生成迁移文件（如果使用）
+# cd apps/api && pnpm typeorm migration:generate -n MigrationName
+```
+
+## ❓ 常见问题
+
+### 1. 依赖安装失败
+
+**问题**：`pnpm install` 失败
+
+**解决方案**：
+
+- 检查 Node.js 版本是否符合要求
+- 清除缓存：`pnpm store prune`
+- 删除 `node_modules` 和 `pnpm-lock.yaml`，重新安装
+- 检查网络连接，可能需要配置镜像源
+
+### 2. 数据库连接失败
+
+**问题**：启动时提示数据库连接失败
+
+**解决方案**：
+
+- 检查 MySQL 服务是否启动
+- 检查数据库配置是否正确（`apps/api/src/config/config.development.yaml`）
+- 确认数据库已创建：`mysql -u root -p -e "SHOW DATABASES;"`
+- 检查数据库用户权限
+
+### 3. Redis 连接失败
+
+**问题**：提示 Redis 连接失败
+
+**解决方案**：
+
+- Redis 是可选的，如果不需要队列功能可以暂时不启动
+- 检查 Redis 服务是否启动：`redis-cli ping`
+- 检查 Redis 配置是否正确
+- 如果不需要 Redis，可以注释相关配置
+
+### 4. 端口被占用
+
+**问题**：启动时提示端口被占用
+
+**解决方案**：
+
+- 检查端口占用：`lsof -i :6010`（macOS/Linux）或 `netstat -ano | findstr :6010`（Windows）
+- 修改配置文件中的端口号
+- 或停止占用端口的进程
+
+### 5. 前端页面空白
+
+**问题**：访问前端页面显示空白
+
+**解决方案**：
+
+- 检查后端 API 是否正常启动
+- 打开浏览器控制台查看错误信息
+- 检查网络请求是否正常（Network 面板）
+- 确认 API 地址配置正确
+
+### 6. 代码修改不生效
+
+**问题**：修改代码后没有自动更新
+
+**解决方案**：
+
+- 检查是否在开发模式（`pnpm run dev`）
+- 清除缓存：删除 `.next`、`dist` 等构建目录
+- 重启开发服务器
+- 检查文件是否被正确保存
+
+## 📚 开发工具推荐
+
+### IDE 推荐
+
+- **VS Code**：推荐使用，安装以下扩展：
+  - ESLint
+  - Prettier
+  - TypeScript Vue Plugin (Volar)
+  - Database Client（数据库管理）
+
+### 数据库工具
+
+- **Navicat**：功能强大的数据库管理工具
+- **DBeaver**：免费开源的数据库工具
+- **TablePlus**：现代化的数据库管理工具
+
+### API 测试工具
+
+- **Postman**：功能全面的 API 测试工具
+- **Insomnia**：轻量级 API 客户端
+- **Swagger UI**：项目内置，访问 `/api-docs`
+
+### 其他工具
+
+- **Redis Desktop Manager**：Redis 可视化工具
+- **Git**：版本控制
+- **Docker**（可选）：容器化部署
+
+## 🔗 相关文档
+
+- [后端手册](./backend/introduce) - 后端开发指南
+- [前端手册](./frontend/introduce) - 前端开发指南
+- [项目介绍](./index) - 项目概览
+
+## 💡 开发建议
+
+1. **代码规范**：遵循项目的 ESLint 和 Prettier 配置
+2. **提交规范**：使用清晰的 commit message
+3. **测试**：修改代码后及时测试功能
+4. **文档**：添加新功能时更新相关文档
+5. **性能**：注意数据库查询性能，避免 N+1 问题
+
+---
+
+祝你开发愉快！如有问题，欢迎提交 [Issue](https://github.com/hexuntao/naa/issues)。
