--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -2,56 +2,317 @@
 title: 介绍
 ---
 
-## 简介
+# NAA (Nest-Antd-Admin)
 
-- 使用 Nest + Antd 等技术栈，并采用 monorepo 管理项目。
-- 后端使用 `Nest`、`MySQL`、`TypeORM`、`Redis` 等技术。
-- 前端使用 `React`、`Umi Max`、`Ant Design` 等技术。
-- 演示地址：[https://naa.hexuntao.com](https://naa.hexuntao.com)
-- 文档地址：[https://naa.hexuntao.com/docs](https://naa.hexuntao.com/docs)
+<div style={{ textAlign: 'center', fontSize: '1.2em', color: '#666', margin: '20px 0' }}>
+  一款简单高效的前后端分离的权限管理系统
+</div>
 
-## 项目目录
+<div style={{ textAlign: 'center', margin: '30px 0' }}>
+  <a
+    href="https://naa.hexuntao.com"
+    target="_blank"
+    style={{
+      display: 'inline-block',
+      margin: '0 10px',
+      padding: '10px 20px',
+      background: '#1890ff',
+      color: 'white',
+      textDecoration: 'none',
+      borderRadius: '4px',
+    }}
+  >
+    🌐 在线预览
+  </a>
+  <a
+    href="https://github.com/hexuntao/naa"
+    target="_blank"
+    style={{
+      display: 'inline-block',
+      margin: '0 10px',
+      padding: '10px 20px',
+      background: '#24292e',
+      color: 'white',
+      textDecoration: 'none',
+      borderRadius: '4px',
+    }}
+  >
+    📦 GitHub
+  </a>
+</div>
 
-```json
-apps
-├── api                       // Api 服务
-│     └── config              // Api 项目配置
-│     └── modules             // Api 项目模块
-│           └── auth          // 认证模块
-│           └── config        // 配置模块
-│           └── core          // 核心模块
-│           └── excel         // 表格模块
-│           └── gen           // 代码生成模块
-│           └── logger        // 日志模块
-│           └── monitor       // 监控模块
-│           └── mybatis       // Mybatis插件
-│           └── security      // 安全模块
-│           └── shared        // 其他共享模块
-│           └── swagger       // swagger模块
-│           └── system        // 系统模块
-|
-├── admin                     // Admin 后台管理系统
-|
-├── docs                      // 项目文档
+::: tip 演示账号
+
+- 用户名：`demo`
+- 密码：`123456` :::
+
+---
+
+## ✨ 特性亮点
+
+### 🔐 完善的权限体系
+
+- **JWT 认证**：基于 Token 的无状态认证
+- **RBAC 权限**：基于角色的访问控制
+- **数据权限**：支持部门、自定义等多种数据权限范围
+- **按钮权限**：细粒度的按钮级权限控制
+
+### 🛠️ 丰富的功能模块
+
+- **系统管理**：用户、角色、部门、岗位、菜单、字典等完整管理
+- **监控审计**：登录日志、操作日志、在线用户、缓存监控
+- **定时任务**：基于 Bull 队列的分布式任务调度
+- **代码生成**：基于数据库表自动生成前后端代码
+
+### 🎨 现代化技术栈
+
+- **后端**：NestJS + TypeORM + MySQL + Redis
+- **前端**：React 18 + Umi Max + Ant Design 5
+- **工程化**：Monorepo + Turbo + TypeScript + pnpm
+
+### 📦 开箱即用
+
+- **统一规范**：全局异常处理、统一响应格式、请求日志
+- **开发工具**：代码生成器、Swagger 文档、健康检查
+- **最佳实践**：完整的项目结构和开发规范
+
+---
+
+## 🚀 快速开始
+
+### 环境要求
+
+- Node.js >= 16.14.1
+- pnpm >= 8.6.10
+- MySQL 8.x（或兼容版本）
+- Redis（可选，用于队列/缓存等）
+
+### 安装步骤
+
+```bash
+# 1. 克隆项目
+git clone https://github.com/hexuntao/naa.git
+cd naa
+
+# 2. 安装依赖
+pnpm install
+
+# 3. 初始化数据库
+mysql -u <user> -p -e "CREATE DATABASE naa DEFAULT CHARSET utf8mb4 COLLATE utf8mb4_general_ci;"
+mysql -u <user> -p naa < sql/naa.sql
+
+# 4. 配置环境变量（可选）
+# 编辑 apps/api/src/config 目录下的配置文件
+
+# 5. 启动开发服务
+pnpm run dev
 ```
 
-## 内置功能
+### 服务地址
 
-<br />
+启动成功后，访问以下地址：
 
-- [x] 用户管理：用户是系统操作者，该功能主要完成系统用户配置。
-- [x] 部门管理：配置系统组织机构（公司、部门、小组），树结构展现支持数据权限。
-- [x] 岗位管理：配置系统用户所属担任职务。
-- [x] 菜单管理：配置系统菜单，操作权限，按钮权限标识等。
-- [x] 角色管理：角色菜单权限分配、设置角色按机构进行数据范围权限划分。
-- [x] 字典管理：对系统中经常使用的一些较为固定的数据进行维护。
-- [x] 参数管理：对系统动态配置常用参数。
-- [x] 操作日志：系统操作日志记录和查询。
-- [x] 登录日志：系统登录日志记录和查询。
-- [x] 在线用户：当前系统中活跃用户状态监控。
-- [x] 定时任务：在线（添加、修改、删除）任务调度包含执行结果日志。
-- [x] 代码生成：前后端代码的生成及下载。
-- [x] 系统接口：根据业务代码自动生成相关的接口文档。
-- [x] 通知公告：系统通知公告发布维护。
+- **后端接口**：http://localhost:6010/api
+- **接口文档**：http://localhost:6010/api-docs
+- **后台管理**：http://localhost:6020/admin
+- **项目文档**：http://localhost:6030/docs
 
-## 演示图
+---
+
+## 📚 技术栈
+
+### 后端技术
+
+| 技术        | 说明               | 版本  |
+| ----------- | ------------------ | ----- |
+| **NestJS**  | Node.js 企业级框架 | 10.x  |
+| **TypeORM** | ORM 框架           | 0.3.x |
+| **MySQL**   | 关系型数据库       | 8.x   |
+| **Redis**   | 缓存和消息队列     | -     |
+| **Bull**    | 基于 Redis 的队列  | 4.x   |
+| **Swagger** | API 文档生成       | 7.x   |
+| **Winston** | 日志框架           | 3.x   |
+
+### 前端技术
+
+| 技术              | 说明           | 版本 |
+| ----------------- | -------------- | ---- |
+| **React**         | UI 框架        | 18.x |
+| **Umi Max**       | 企业级前端框架 | 4.x  |
+| **Ant Design**    | UI 组件库      | 5.x  |
+| **ProComponents** | 高级组件       | 2.x  |
+| **Tailwind CSS**  | 原子化 CSS     | 3.x  |
+
+### 工程化工具
+
+- **TypeScript**：类型安全的 JavaScript
+- **Turbo**：Monorepo 构建工具
+- **pnpm**：快速、节省磁盘空间的包管理器
+- **ESLint/Prettier**：代码规范和格式化
+- **dotenv**：环境变量管理
+
+---
+
+## 📁 项目结构
+
+```
+naa/
+├── apps/
+│   ├── api/              # NestJS 后端服务
+│   │   ├── src/
+│   │   │   ├── config/   # 配置文件
+│   │   │   └── modules/  # 业务模块
+│   │   │       ├── auth/         # 认证模块
+│   │   │       ├── config/       # 配置模块
+│   │   │       ├── core/         # 核心模块
+│   │   │       ├── datascope/    # 数据权限
+│   │   │       ├── excel/        # Excel 导入导出
+│   │   │       ├── file/         # 文件管理
+│   │   │       ├── gen/          # 代码生成
+│   │   │       ├── health/      # 健康检查
+│   │   │       ├── logger/       # 日志系统
+│   │   │       ├── monitor/      # 监控模块
+│   │   │       ├── mybatis/      # MyBatis 支持
+│   │   │       ├── security/     # 安全模块
+│   │   │       ├── swagger/      # API 文档
+│   │   │       └── system/       # 系统管理
+│   │   └── dist/         # 编译输出
+│   │
+│   ├── admin/            # 后台管理系统（Umi + AntD）
+│   │   ├── src/
+│   │   │   ├── pages/   # 页面组件
+│   │   │   ├── components/  # 公共组件
+│   │   │   ├── apis/    # API 接口
+│   │   │   └── utils/   # 工具函数
+│   │   └── dist/        # 构建输出
+│   │
+│   └── docs/            # 项目文档（Next.js + Nextra）
+│
+├── packages/            # 共享包
+│   ├── eslint-config/   # ESLint 配置
+│   └── ts-config/       # TypeScript 配置
+│
+├── sql/                 # 数据库脚本
+│   └── naa.sql         # 初始化脚本
+│
+├── pnpm-workspace.yaml  # pnpm 工作区配置
+├── turbo.json          # Turbo 配置
+└── package.json        # 根 package.json
+```
+
+---
+
+## 🎯 核心功能
+
+### 认证与鉴权
+
+- ✅ 用户登录/登出
+- ✅ JWT Token 认证
+- ✅ 验证码保护
+- ✅ 会话管理
+
+### 系统管理
+
+- ✅ **用户管理**：用户信息配置、角色分配、状态管理
+- ✅ **角色管理**：角色权限分配、数据权限范围设置
+- ✅ **部门管理**：树形结构组织架构、支持数据权限
+- ✅ **岗位管理**：岗位信息维护
+- ✅ **菜单管理**：菜单配置、按钮权限标识
+- ✅ **字典管理**：系统字典数据维护
+- ✅ **参数配置**：系统参数动态配置
+- ✅ **通知公告**：系统公告发布维护
+
+### 监控审计
+
+- ✅ **登录日志**：记录用户登录成功和失败信息
+- ✅ **操作日志**：记录用户操作行为，支持查询和导出
+- ✅ **在线用户**：实时查看在线用户，支持强制退出
+- ✅ **缓存监控**：查看和管理 Redis 缓存
+- ✅ **定时任务**：任务调度、执行日志、任务管理
+
+### 工具能力
+
+- ✅ **文件管理**：文件上传、下载、预览
+- ✅ **Excel 导入导出**：基于装饰器的 Excel 处理
+- ✅ **代码生成**：根据数据库表自动生成前后端代码
+- ✅ **Swagger 文档**：自动生成 API 接口文档
+
+### 开发特性
+
+- ✅ **统一异常处理**：全局异常过滤器
+- ✅ **统一响应格式**：标准化的 API 响应
+- ✅ **请求日志**：自动记录请求和响应
+- ✅ **数据权限拦截**：自动过滤数据范围
+- ✅ **参数校验**：基于 class-validator 的自动校验
+- ✅ **健康检查**：系统健康状态监控
+
+---
+
+## 📖 文档导航
+
+### 后端手册
+
+- [配置系统](./backend/config) - 配置管理和环境变量
+- [认证模块](./backend/auth) - 登录认证和会话管理
+- [系统权限](./backend/security) - 权限控制和角色管理
+- [数据权限](./backend/datascope) - 数据范围权限
+- [异常处理](./backend/exception) - 全局异常处理
+- [系统日志](./backend/logger) - 日志记录和查询
+- [代码生成](./backend/gen) - 代码生成器使用
+- [更多文档...](./backend/introduce)
+
+### 前端手册
+
+- [前端介绍](./frontend/introduce) - 前端技术栈和结构
+- [字典使用](./frontend/dict) - 字典数据使用
+- [动态菜单](./frontend/dynamic-menu) - 菜单权限控制
+
+### 开发指南
+
+- [本地开发](./development) - 开发环境搭建和运行
+
+---
+
+## 🛠️ 常用命令
+
+```bash
+# 开发
+pnpm run dev          # 启动所有服务（后端 + 前端）
+pnpm run dev:api      # 仅启动后端
+pnpm run dev:admin    # 启动前端（自动启动后端）
+pnpm run dev:docs     # 启动文档站点
+
+# 构建
+pnpm build            # 构建所有应用
+
+# 代码质量
+pnpm lint             # 代码检查
+pnpm format           # 代码格式化
+```
+
+---
+
+## 🤝 贡献
+
+欢迎提交 Issue 和 Pull Request！
+
+在提交代码前，请确保：
+
+- 通过 `pnpm lint` 代码检查
+- 通过基本构建测试
+- 遵循项目的代码规范
+
+---
+
+## 📄 许可证
+
+[MIT License](https://github.com/hexuntao/naa/blob/main/LICENSE)
+
+---
+
+## 🔗 相关链接
+
+- [在线演示](https://naa.hexuntao.com)
+- [GitHub 仓库](https://github.com/hexuntao/naa)
+- [问题反馈](https://github.com/hexuntao/naa/issues)
+- [更新日志](https://github.com/hexuntao/naa/releases)
