--- a/apps/docs/pages/backend/config.mdx
+++ b/apps/docs/pages/backend/config.mdx
@@ -2,13 +2,13 @@
 title: 配置系统
 ---
 
-用于获取本地配置和环境值。
+用于获取本地配置和环境值。支持多环境配置、环境变量注入和配置热加载。
 
-### 导入模块
+## 导入模块
 
 ```ts
 // app.module.ts
-import * as path from 'path';
+import { resolve } from 'path';
 import { Module } from '@nestjs/common';
 import { ConfigModule } from '@/modules/config';
 
@@ -17,6 +17,7 @@ import * as configs from './config'; // 项目应用配置
 @Module({
   imports: [
     ConfigModule.forRoot({
+      cwd: resolve(__dirname, 'config'),
       data: configs,
     }),
   ],
@@ -24,17 +25,30 @@ import * as configs from './config'; // 项目应用配置
 export class AppModule {}
 ```
 
-### 配置文件
+## 配置文件
 
-以上配置将从 `src/config` 目录拿到应用配置。
+配置模块支持从 `src/config` 目录加载配置文件。
 
-- 环境变量从 `process.env.NODE_ENV` 设置，没有设置默认为 `development` 。
+- 环境变量从 `process.env.NODE_ENV` 设置，没有设置默认为 `development`
+- 支持 YAML、JSON、JS 等格式的配置文件
+- 支持环境变量注入，使用 `${{ ENV_VAR }}` 或 `${{ ENV_VAR:default }}` 语法
 
-- `env` 方法获取当前环境的所有的配置。如：`env('API_PORT', 3000)`, 第一个参数为变量key, 第二个参数可为默认值
+### 配置文件示例
+
+```yaml
+# config/database.config.yaml
+database:
+  type: mysql
+  host: ${{ DB_HOST:localhost }}
+  port: ${{ DB_PORT:3306 }}
+  username: ${{ DB_USER:root }}
+  password: ${{ DB_PASSWORD }}
+  database: ${{ DB_NAME:naa }}
+```
 
 ## 使用
 
-### 注入实例
+### 注入 ConfigService
 
 ```ts
 import { Injectable, OnModuleInit } from '@nestjs/common';
@@ -45,9 +59,74 @@ export class AppService implements OnModuleInit {
   constructor(private config: ConfigService) {}
 
   onModuleInit() {
-    this.config.get();
-    this.config.get<number>('service.port');
-    this.config.get<number>('service.port', 3000);
+    // 获取所有配置
+    const allConfig = this.config.get();
+
+    // 根据路径获取配置（支持点号分隔的路径）
+    const port = this.config.get<number>('app.port');
+
+    // 获取配置并设置默认值
+    const timeout = this.config.get<number>('app.timeout', 5000);
+
+    // 获取嵌套配置
+    const dbHost = this.config.get<string>('database.host');
   }
 }
 ```
+
+### 配置路径说明
+
+配置路径使用点号（`.`）分隔，支持嵌套对象访问：
+
+```ts
+// 配置文件结构
+{
+  app: {
+    name: 'NAA',
+    port: 6010,
+    database: {
+      host: 'localhost',
+      port: 3306
+    }
+  }
+}
+
+// 获取配置
+this.config.get('app.name');           // 'NAA'
+this.config.get('app.port');           // 6010
+this.config.get('app.database.host');  // 'localhost'
+```
+
+## 注意事项
+
+::: tip 配置加载顺序
+
+1. 首先加载基础配置文件
+2. 然后根据 `NODE_ENV` 加载对应环境的配置文件（如 `config.development.yaml`）
+3. 环境变量会覆盖配置文件中的值 :::
+
+::: warning 类型安全使用 TypeScript 时，建议为配置定义接口类型，确保类型安全：
+
+```ts
+interface AppConfig {
+  app: {
+    name: string;
+    port: number;
+  };
+  database: {
+    host: string;
+    port: number;
+  };
+}
+
+// 使用时指定类型
+const appName = this.config.get<AppConfig['app']['name']>('app.name');
+```
+
+:::
+
+::: tip 环境变量
+
+- 环境变量名称区分大小写
+- 使用 `${{ VAR }}` 语法时，如果变量不存在且没有默认值，会抛出错误
+- 建议在 `.env` 文件中管理环境变量，使用 `dotenv` 加载 :::
