--- a/apps/docs/pages/backend/exception.mdx
+++ b/apps/docs/pages/backend/exception.mdx
@@ -103,3 +103,112 @@ export class UnknownExceptionFilter implements ExceptionFilter {
   }
 }
 ```
+
+## 异常使用示例
+
+### 业务异常
+
+```ts
+import { ServiceException } from '@/modules/core';
+
+@Injectable()
+export class UserService {
+  async createUser(dto: CreateUserDto) {
+    // 检查用户名是否已存在
+    const existUser = await this.userRepository.findOne({
+      where: { userName: dto.userName }
+    });
+    
+    if (existUser) {
+      throw new ServiceException('用户名已存在');
+    }
+    
+    // 业务逻辑...
+  }
+}
+```
+
+### 验证异常
+
+验证异常由全局验证管道自动抛出，无需手动处理：
+
+```ts
+// DTO 类
+export class CreateUserDto {
+  @IsNotEmpty({ message: '用户名不能为空' })
+  @MaxLength(50, { message: '用户名不能超过50个字符' })
+  userName: string;
+}
+
+// Controller 中直接使用，验证失败会自动抛出 ValidatorException
+@Post()
+async create(@Body() dto: CreateUserDto) {
+  // 如果验证失败，会自动抛出 ValidatorException
+  return await this.userService.createUser(dto);
+}
+```
+
+### 权限异常
+
+权限异常由权限守卫自动抛出：
+
+```ts
+// 如果用户没有指定权限，会自动抛出 NotPermissionException
+@RequirePermissions('system:user:add')
+@Post()
+async create() {
+  // ...
+}
+```
+
+## 注意事项
+
+::: tip 异常处理顺序
+异常过滤器的执行顺序很重要：
+1. 首先执行业务异常过滤器（`ServiceExceptionFilter`）
+2. 然后执行未知异常过滤器（`UnknownExceptionFilter`）
+3. 确保所有异常都被正确处理
+:::
+
+::: warning 异常信息暴露
+生产环境中，建议：
+- 不要向客户端暴露详细的错误堆栈信息
+- 使用友好的错误提示信息
+- 记录详细的错误日志用于排查问题
+:::
+
+::: tip 自定义异常
+如果需要定义新的异常类型：
+1. 继承 `ServiceException` 或创建新的异常类
+2. 在异常过滤器中添加对应的处理逻辑
+3. 确保异常信息对用户友好
+:::
+
+::: warning 异步异常
+在异步操作中抛出异常时，确保异常能够正确传播：
+```ts
+// ✅ 正确：使用 async/await
+async function process() {
+  if (error) {
+    throw new ServiceException('处理失败');
+  }
+}
+
+// ❌ 错误：Promise 中的异常可能被吞掉
+function process() {
+  return new Promise(() => {
+    if (error) {
+      throw new ServiceException('处理失败'); // 可能无法正确捕获
+    }
+  });
+}
+```
+:::
+
+::: tip 异常代码
+每个异常都可以指定错误代码，便于前端根据错误代码进行不同处理：
+```ts
+throw new ServiceException('用户不存在', 404);
+throw new ServiceException('权限不足', 403);
+```
+:::
