--- a/apps/docs/pages/development.mdx
+++ b/apps/docs/pages/development.mdx
@@ -93,7 +93,6 @@ REDIS_PASSWORD=
 
 # API 配置
 API_PORT=6010
-API_HOST=127.0.0.1
 API_PREFIX=api
 
 # JWT 密钥（生产环境必须修改）
@@ -178,8 +177,8 @@ pnpm run dev:docs
 | ------------ | ------------------------------ | ---------------- |
 | **后端 API** | http://127.0.0.1:6010/api      | RESTful API 接口 |
 | **接口文档** | http://127.0.0.1:6010/api-docs | Swagger API 文档 |
-| **后台管理** | http://127.0.0.1:6020/admin    | 前端管理系统     |
-| **项目文档** | http://127.0.0.1:6030/docs     | 本文档站点       |
+| **后台管理** | http://127.0.0.1:6020          | 前端管理系统     |
+| **项目文档** | http://127.0.0.1:6030          | 本文档站点       |
 
 ## 🔧 开发模式
 
