--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -10,7 +10,7 @@ title: 介绍
 
 <div style={{ textAlign: 'center', margin: '30px 0' }}>
   <a
-    href="https://naa.hexuntao.com"
+    href="https://admin.hexuntao.dpdns.org"
     target="_blank"
     style={{
       display: 'inline-block',
@@ -114,8 +114,8 @@ pnpm run dev
 
 - **后端接口**：http://localhost:6010/api
 - **接口文档**：http://localhost:6010/api-docs
-- **后台管理**：http://localhost:6020/admin
-- **项目文档**：http://localhost:6030/docs
+- **后台管理**：http://localhost:6020
+- **项目文档**：http://localhost:6030
 
 ---
 
@@ -312,7 +312,7 @@ pnpm format           # 代码格式化
 
 ## 🔗 相关链接
 
-- [在线演示](https://naa.hexuntao.com)
+- [在线演示](https://admin.hexuntao.dpdns.org)
 - [GitHub 仓库](https://github.com/hexuntao/naa)
 - [问题反馈](https://github.com/hexuntao/naa/issues)
 - [更新日志](https://github.com/hexuntao/naa/releases)
